2002-12-05  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h (AstDeclaredType, AstInitializerDeclaration): More
	AST backporting from generics-branch. Also change all Num* methods
	to return unsigned counts, instead of int.
	* src/Makefile.am:
	* src/ast.cpp:
	* src/body.cpp:
	* src/bytecode.cpp:
	* src/bytecode.h:
	* src/class.h:
	* src/control.cpp:
	* src/decl.cpp:
	* src/definite.cpp:
	* src/depend.cpp:
	* src/error.cpp:
	* src/error.h:
	* src/expr.cpp:
	* src/getclass.cpp:
	* src/init.cpp:
	* src/java.g:
	* src/modifier.cpp:
	* src/parser.cpp:
	* src/parser.h:
	* src/semantic.h:
	* src/spell.h:
	* src/symbol.cpp:
	* src/symbol.h:
	* src/unparse.cpp: Associated back-ports. Also fix all compiler
	warnings.
	* src/Makefile.in:
	* src/javaact.cpp:
	* src/javaact.h:
	* src/javadcl.h:
	* src/javadef.h:
	* src/javaprs.h:
	* src/javasym.h: Regenerate.

2002-12-04  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h (AstType, AstInstanceofExpression, AstClassLiteral):
	Backport abstract syntax tree improvements from generics-branch.
	* src/java.g: Backport grammar improvements from generics-branch,
	now allowing LALR(1) instead of LALR(2) parsing.
	* src/ast.cpp
	* src/body.cpp:
	* src/bytecode.cpp:
	* src/bytecode.h:
	* src/decl.cpp:
	* src/definite.cpp:
	* src/expr.cpp:
	* src/modifier.cpp:
	* src/parser.cpp:
	* src/parser.h:
	* src/semantic.h:
	* src/symbol.cpp:
	* src/unparse.cpp: Backport changes associated with AST update.
	* src/javaact.cpp:
	* src/javaact.h:
	* src/javadcl.h:
	* src/javadef.h:
	* src/javaprs.h:
	* src/javasym.h: Regenerate.

2002-12-02  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (InitializeArray): Fix bug 3399.

2002-12-02  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.h (EmitBinaryExpression, ConcatenateString),
	(AppendString): Add need_value argument to emit less code.
	* src/bytecode.cpp (EmitBinaryExpression): Fix logic in evaluation
	of a||true, bug 3398.

2002-11-30  Eric Blake  <ebb9@email.byu.edu>
